--- a/package.json
+++ b/package.json
@@ -54,5 +54,18 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.17"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "tailwind.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shoaib7635/fitinstitute.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/shoaib7635/fitinstitute/issues"
+  },
+  "homepage": "https://github.com/shoaib7635/fitinstitute#readme"
 }
